@@ -1,7 +1,6 @@
 package com.example.myapplication2;
 
 import android.content.Intent;
-import android.content.res.AssetManager;
 import android.os.Bundle;
 import android.os.Handler;
 import android.os.Message;
@@ -22,7 +21,6 @@ import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
-import java.util.List;
 
 
 public class HomeActivity extends AppCompatActivity  {
@@ -35,8 +33,8 @@ public class HomeActivity extends AppCompatActivity  {
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_home);
-        AssetManager am = getResources().getAssets();
 
+        System.out.println("Home onCreate()");
 
         FragmentManager fm = getSupportFragmentManager();
         FragmentTransaction fragmentTransaction = fm.beginTransaction();
@@ -84,9 +82,8 @@ public class HomeActivity extends AppCompatActivity  {
 
         Input input = new Input();
         input.readFile("sample_data.txt", getApplicationContext());
-        List<String> list = input.getData()[input.getMonth()][input.getDay()];
-        final String last_time = list.get(list.size() - 1);
-        //System.out.println(last_time);
+
+        final String lastTime = input.getLast();
 
         mHandler = new Handler(){
             @Override
@@ -95,9 +92,8 @@ public class HomeActivity extends AppCompatActivity  {
                     Calendar cal = Calendar.getInstance();
                     Date now = cal.getTime();
                     SimpleDateFormat sdf = new SimpleDateFormat("yyyy.MM.dd.HH.mm.ss");
-                    Date lsTime = sdf.parse(last_time);
-                    //System.out.println(now);
-                    //System.out.println(lsTime);
+                    Date lsTime = sdf.parse(lastTime);
+
                     long diff = now.getTime() - lsTime.getTime();
                     long seconds = diff/1000;
                     long minutes = seconds/60;
@@ -112,8 +108,8 @@ public class HomeActivity extends AppCompatActivity  {
                     else
                         strTime = String.format("%d days\n%dh %dm %ds", days, hours % 24, minutes % 60, seconds % 60);
 
-                    TextView last_time = findViewById(R.id.after_last_smoke);
-                    last_time.setText("From LAST Smoking\n" + strTime);
+                    TextView fromLast = findViewById(R.id.after_last_smoke);
+                    fromLast.setText("From LAST Smoking\n" + strTime);
                 } catch (ParseException p){
                     p.printStackTrace();
                 }
@@ -144,7 +140,6 @@ public class HomeActivity extends AppCompatActivity  {
 
         TextView week = findViewById(R.id.this_week);
         week.setText("THIS WEEK\n" + String.valueOf(input.countThisWeek()));
-
     }
 
 
@@ -166,5 +161,4 @@ public class HomeActivity extends AppCompatActivity  {
     protected void onPause() {
         super.onPause();
     }
-
 }
